--- a/MerlionPortal/MerlionPortal-war/web/user/dashboard.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/user/dashboard.xhtml
@@ -18,8 +18,9 @@
 
         <!-- Override Content -->
         <ui:define name="left">
-            <div>Welcome to Merlion Portal!</div>
-            <p>Please select a service from the right to proceed.</p>
+            <div class="dashboard-welcome">
+                <h5><span class="glyphicon glyphicon-tree-conifer"></span> Welcome to Merlion Portal!</h5>
+            </div>
         </ui:define>
 
         <ui:define name="right">
