--- a/MerlionPortal/MerlionPortal-war/web/oes/retrievesavedorder.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/retrievesavedorder.xhtml
@@ -31,13 +31,13 @@
 
                 <p:submenu label="Quotation" styleClass="display:block">
                     <p:menuitem value="View All Request" url="viewallrequests.xhtml" />
-                    <p:menuitem value="View Quotation" url="displayallquotations.xhtml" style="background:#aa5050; color:white" />
+                    <p:menuitem value="View Quotation" url="displayallquotations.xhtml" />
                 </p:submenu>
                 <c:if test="#{dashboardBean.checkOESCanGeneratePO()||dashboardBean.checkOESCanGenerateSO() ||dashboardBean.loginedUser.userType == 'superuser'}">
                     <p:submenu label="Orders" styleClass="display:block">
                         <c:if test="#{dashboardBean.checkOESCanGeneratePO()|| dashboardBean.loginedUser.userType == 'superuser'}">
                             <p:menuitem value="Create Order" url="pogeneration.xhtml" />
-                            <p:menuitem value="Retrieve Saved Order" url="retrievesavedorder.xhtml" />
+                            <p:menuitem value="Retrieve Saved Order" url="retrievesavedorder.xhtml" style="background:#aa5050; color:white"/>
                         </c:if>
                         <c:if test="#{dashboardBean.checkOESCanGeneratePO()||dashboardBean.checkOESCanGenerateSO() ||dashboardBean.loginedUser.userType == 'superuser'}">
                             <p:menuitem value="All Purcahse Order" url="viewallpo.xhtml" /> 
