OES menu bar debug

--- a/MerlionPortal/MerlionPortal-war/web/oes/customeranalysis.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/customeranalysis.xhtml
@@ -72,7 +72,7 @@
                 <p:breadCrumb>
                     <p:menuitem value="OES Home" url="oesindexpage.xhtml" />
                     <p:menuitem value="Report Dashboard" url="reportdashboard.xhtml" />
-                    <p:menuitem value="Customer Infor" url="customeranalysis.xhtml" />
+                    <p:menuitem value="Customer Information" url="customeranalysis.xhtml" />
                 </p:breadCrumb>
                 <p:fieldset legend="Please select period" style="margin-bottom:20px">
                     <h:panelGrid columns="3" cellpadding="5">
