--- a/MerlionPortal/MerlionPortal-war/web/wms/receivingputawayprocess.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/receivingputawayprocess.xhtml
@@ -93,6 +93,7 @@
         <ui:define name="right">
             <p:breadCrumb>
                 <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                <p:menuitem value="View Incoming Orders" url="viewincomingorders.xhtml" />
                 <p:menuitem value="Receiving and Putaway Process" url="receivingputawayprocess.xhtml" />
             </p:breadCrumb>
             <h:form id="formMain">
