--- a/MerlionPortal/MerlionPortal-war/web/wms/stockfulfillmentprocess.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/stockfulfillmentprocess.xhtml
@@ -93,6 +93,7 @@
         <ui:define name="right">
             <p:breadCrumb>
                 <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                <p:menuitem value="View Outgoing Orders" url="viewoutgoingorders.xhtml" />
                 <p:menuitem value="Stock Fulfillment Process" url="stockfulfillmentprocess.xhtml" />
             </p:breadCrumb>
             <h:form id="formMain">
