OES display alignment debug

--- a/MerlionPortal/MerlionPortal-war/web/oes/displayrequestinfor.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/displayrequestinfor.xhtml
@@ -16,7 +16,7 @@
 
         <ui:define name="more-imports">
             <ui:insert>
-                <!--                import CSS style or Javascript here, if any-->
+                <link rel="stylesheet" href="${request.contextPath}/css/oes.css" type="text/css" />
             </ui:insert>
         </ui:define>
 
