OES display alignment debug

--- a/MerlionPortal/MerlionPortal-war/web/oes/viewquotationinfor.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/viewquotationinfor.xhtml
@@ -16,7 +16,7 @@
 
         <ui:define name="more-imports">
             <ui:insert>
-                <!--                import CSS style or Javascript here, if any-->
+                <link rel="stylesheet" href="${request.contextPath}/css/oes.css" type="text/css" />
             </ui:insert>
         </ui:define>
 
@@ -77,7 +77,7 @@
                 </p:breadCrumb>
 
                 <p:fieldset legend="Customer Information" style="margin-bottom:20px">
-                    <h:panelGrid columns="2" cellpadding="5">
+                    <h:panelGrid columns="2" cellpadding="5" >
                         <h:outputText value="Customer Id:"/>
                         <h:outputText value="#{quotationManagedBean.selectedQuotation.customerId}"/>
                         <h:outputText value="Contact Person First Name:"/>
